# ResearchGrantToolbelt

./: .gitignore  Dockerfile  Fine Tuning and Evaluation.ipynb  Initial Data Loading and Ragas Evaluation.ipynb  LICENSE  README.md  Research Grant Toolbelt OLD.ipynb  Research Grant Toolbelt.ipynb  Research Grant Toolbelt.py  TemporaryFile  app.py  chainlit.md  config.toml  pyproject.toml  requirements.txt  streamlit_app.py  test_dataset.jsonl  val_dataset.jsonl
Presentation Materials/: NIH_Detailed_Budget_Justification_Sample.doc
data/: projects_data.json  publications_data.json
data/Documents/205274f8/: PA-25-147_Budget_Analysis_Effort_Allocation.md
data/Documents/217bf8aa/: NIDDK_HRMC_Study_Proposal.txt
data/Documents/392e0911/: Estimation_of_Person_Months_for_NIH_study.txt
data/Documents/6a46a638/: effort_allocation_and_person_months_tables.txt
data/Documents/Budget Documents/: 1_Funding_Opportunity_Overview.txt  2_Personnel_Effort.txt  3_Personnel_Costs.txt  3_Personnel_Justification.txt  4_Non-Personnel_Costs.txt  4_Personnel_Justification.txt  5_Non-Personnel_Costs.txt  5_Non-Personnel_Justification.txt  6_Non-Personnel_Justification.txt  Final Budget Proposal.txt  FinalBudgetProposal.md  FinalBudgetProposal.txt  Non-Personnel Costs.txt  Non-Personnel Justification.txt  Personnel Effort.txt  Personnel Justification.txt
data/Documents/cb20ec4a/: NIH_Funding_Opportunity_PA-25-147_Personnel_Effort_and_Budget_Document.txt
data/Opportunities/: NIH_Funding_Opportunities_20250221.csv  output.json
public/: styles.css
